#4027 add white space before h3 (+ correct h-lvl)

--- a/css/01-setup/basics.scss
+++ b/css/01-setup/basics.scss
@@ -59,6 +59,10 @@ h4 {
     color: #383836;
 }
 
+h3 {
+    margin-top: 40px;
+}
+
 dt,
 dd {
     display: inline-block;
